--- a/facemesh/package.json
+++ b/facemesh/package.json
@@ -17,22 +17,23 @@
     "@tensorflow/tfjs-core": "^1.6.1"
   },
   "dependencies": {
-    "@tensorflow-models/blazeface": "0.0.5"
+    "@tensorflow-models/blazeface": "0.0.5",
+    "@tensorflow-models/mobilenet": "^2.0.4"
   },
   "devDependencies": {
     "@tensorflow/tfjs-converter": "^1.6.1",
     "@tensorflow/tfjs-core": "^1.6.1",
     "@types/jasmine": "~2.5.53",
-    "jasmine": "~3.2.0",
+    "jasmine": "^3.2.0",
     "jasmine-core": "~3.1.0",
     "rimraf": "~2.6.2",
     "rollup": "~0.58.2",
     "rollup-plugin-node-resolve": "~3.3.0",
     "rollup-plugin-typescript2": "~0.13.0",
     "rollup-plugin-uglify": "~3.0.0",
-    "ts-node": "~5.0.0",
+    "ts-node": "^5.0.1",
     "tslint": "~5.8.0",
-    "typescript": "3.3.3333",
+    "typescript": "^3.3.3333",
     "yalc": "^1.0.0-pre.27"
   },
   "scripts": {
